# liblinalg

./: .gitignore  CMakeLists.txt  NOTICE
cmake/: liblinalg-config.cmake.in  utils.cmake
include/liblinalg/: export.h  matrix.h
src/: matrix.cpp
tests/: CMakeLists.txt  basic_tests.cpp  constructor_tests.cpp  index_tests.cpp  math_tests.cpp  math_tests_advanced.cpp  output_tests.cpp  shape_tests.cpp
